# penrose_arlo

./: .gitignore  Cargo.toml  README.md  install.sh  penrose_arlo.desktop
src/: bar_widget.rs  colours.rs  command_listener.rs  key_bindings.rs  layouts.rs  main.rs  new_window_hook.rs  player.rs  reactive_text.rs  setup.rs  status_bar.rs  window_switcher.rs  wm_ext.rs  x_data.rs
src/bar/: bar_widget.rs  mod.rs  status_bar.rs
src/bar/widgets/: text.rs
