[package]
name = "penrose_arlo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penrose = { git = "https://github.com/sminez/penrose", rev = "bbff3c3" } 
simplelog = "0.12"
tracing = "0.1"
mpris = "1.1"
xcb = "1.1"
lazy_static = "1.4"
arboard = "2.1"
chrono = "0.4"
